--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -32,32 +32,32 @@
             android:id="@+id/result"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="test"
             android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/restart" />
+            android:layout_alignStart="@+id/restart"
+            android:layout_weight="1"
+            android:text="test" />
 
         <Button
             android:id="@+id/restart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/restart"
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
+            android:layout_marginBottom="7dp"
             android:layout_marginStart="7dp"
-            android:layout_marginBottom="7dp" />
+            android:layout_weight="1"
+            android:text="@string/restart" />
 
         <TextView
             android:id="@+id/step"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="97dp"
+            android:layout_toEndOf="@+id/restart"
             android:layout_weight="1"
             android:gravity="left"
-            android:text="@string/score"
-            android:layout_alignParentTop="true"
-            android:layout_toEndOf="@+id/restart"
-            android:layout_marginStart="97dp" />
+            android:text="@string/stepCount" />
 
         <TextView
             android:id="@+id/userRecord"
@@ -73,8 +73,8 @@
             android:id="@+id/timeText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/restart"
             android:layout_alignStart="@+id/userRecord"
-            android:layout_below="@+id/userRecord"
             android:layout_weight="1"
             android:text="@string/time" />
 
@@ -82,207 +82,47 @@
             android:id="@+id/timeValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
             android:layout_weight="1"
-            android:text="test"
-            android:layout_below="@+id/userRecord"
-            android:layout_toEndOf="@+id/userRecord" />
+            android:text="0:00"
+            android:layout_alignBaseline="@+id/timeText"
+            android:layout_alignBottom="@+id/timeText"
+            android:layout_alignStart="@+id/currentScore" />
 
         <TextView
-            android:id="@+id/test1"
+            android:id="@+id/currentStepCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="test"
             android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/timeValue"
-            android:layout_weight="1"
-            android:text="test" />
+            android:layout_toEndOf="@+id/userRecord"
+            android:layout_marginStart="11dp" />
 
         <TextView
-            android:id="@+id/test2"
+            android:id="@+id/recordStepCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="test"
-            android:layout_below="@+id/test1"
-            android:layout_alignStart="@+id/test1" />
+            android:layout_below="@+id/currentStepCount"
+            android:layout_alignStart="@+id/currentStepCount" />
+
+        <TextView
+            android:id="@+id/score"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/userRecord"
+            android:layout_below="@+id/userRecord"
+            android:text="@string/score" />
+
+        <TextView
+            android:id="@+id/currentScore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="test"
+            android:layout_below="@+id/recordStepCount"
+            android:layout_alignStart="@+id/recordStepCount" />
 
     </RelativeLayout>
 
-    <!--<LinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:background="@android:color/background_light"-->
-        <!--android:gravity="bottom"-->
-        <!--android:orientation="horizontal">-->
-
-        <!--<Space-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="1" />-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/result"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="" />-->
-
-        <!--<Space-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="1" />-->
-
-        <!--<TextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="Simple text"-->
-            <!--android:visibility="invisible" />-->
-
-        <!--<Space-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="1" />-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/step"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:gravity="left"-->
-            <!--android:text="@string/score" />-->
-
-        <!--<Space-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="1" />-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/test1"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="" />-->
-
-        <!--<Space-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="1" />-->
-
-    <!--</LinearLayout>-->
-
-    <!--<LinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:background="@android:color/background_light"-->
-        <!--android:gravity="bottom"-->
-        <!--android:orientation="horizontal">-->
-
-        <!--<Space-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="1" />-->
-
-        <!--<TextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_weight="1"-->
-            <!--android:visibility="invisible" />-->
-
-        <!--<Space-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="1" />-->
-
-        <!--<TextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_weight="1"-->
-            <!--android:visibility="invisible" />-->
-
-        <!--<Space-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="1" />-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/userRecord"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_weight="1"-->
-            <!--android:gravity="left"-->
-            <!--android:text="@string/record" />-->
-
-        <!--<Space-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="1" />-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/test2"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_weight="1"-->
-            <!--android:text="" />-->
-
-        <!--<Space-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="1" />-->
-
-    <!--</LinearLayout>-->
-
-    <!--<LinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:background="@android:color/background_light"-->
-        <!--android:gravity="bottom"-->
-        <!--android:orientation="horizontal">-->
-
-        <!--<Space-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="1" />-->
-
-        <!--<Button-->
-            <!--android:id="@+id/restart"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="@string/restart" />-->
-
-        <!--<Space-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="1" />-->
-
-        <!--<TextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="Simple text"-->
-            <!--android:visibility="invisible" />-->
-
-        <!--<Space-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="1" />-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/timeText"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="@string/time" />-->
-
-        <!--<Space-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="1" />-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/timeValue"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="" />-->
-
-        <!--<Space-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="1" />-->
-
-    <!--</LinearLayout>-->
 </LinearLayout>
