add back button

--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -123,6 +123,14 @@
             android:layout_below="@+id/recordStepCount"
             android:layout_alignStart="@+id/recordStepCount" />
 
+        <Button
+            android:id="@+id/backBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/restart"
+            android:layout_toEndOf="@+id/restart"
+            android:text="@string/back" />
+
     </RelativeLayout>
 
 </LinearLayout>
