--- a/app/src/main/res/layout/flip_front_custom.xml
+++ b/app/src/main/res/layout/flip_front_custom.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="50dp"
-    android:layout_height="50dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:elevation="4dp">
 
     <ImageView
         android:id="@+id/imageview_front"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:contentDescription="@null"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:scaleType="fitXY" />
 
 </FrameLayout>
