--- a/app/src/main/res/layout/activity_temp.xml
+++ b/app/src/main/res/layout/activity_temp.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="bottom"
+    android:background="@drawable/background_earth"
     android:orientation="vertical"
     android:weightSum="1">
 
@@ -13,8 +14,8 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:id="@+id/basicLayout"
-        android:background="@drawable/politicheskaya_karta_europe"
         android:layout_weight="1">
+        <!--android:background="@drawable/politicheskaya_karta_europe"-->
 
     </LinearLayout>
 
