--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:gravity="bottom"
     android:orientation="vertical"
+    android:background="@drawable/background_earth"
     android:weightSum="1">
 
 
@@ -18,8 +19,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@drawable/politicheskaya_karta_europe"
+
             android:orientation="vertical">
+            <!--android:background="@drawable/politicheskaya_karta_europe"-->
 
         </LinearLayout>
     </ScrollView>
