--- a/app/src/main/res/layout/activity_statistic.xml
+++ b/app/src/main/res/layout/activity_statistic.xml
@@ -97,6 +97,13 @@
             android:textOn="@string/xxlarge" />
     </LinearLayout>
 
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/recyclerview">
+
+    </android.support.v7.widget.RecyclerView>
+
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
