add endofgame activity, new score count

--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -59,7 +59,7 @@
             android:layout_toEndOf="@+id/restart"
             android:layout_weight="1"
             android:gravity="left"
-            android:text="@string/stepCount" />
+            android:text="@string/step" />
 
         <TextView
             android:id="@+id/userRecord"
