--- a/app/src/main/res/layout/activity_temp.xml
+++ b/app/src/main/res/layout/activity_temp.xml
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="left"
-            android:text="@string/stepCount"
+            android:text="@string/step"
             android:layout_alignParentTop="true"
             android:layout_toEndOf="@+id/restart"
             android:layout_marginStart="97dp" />
