--- a/app/src/main/res/layout/activity_end_of_game.xml
+++ b/app/src/main/res/layout/activity_end_of_game.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background_earth"
     tools:context="com.example.mishka.flagmemorine.activity.EndOfGameActivity">
 
     <android.support.design.widget.AppBarLayout
